# fp-homework

hw1/: hw1.cabal
hw1/src/: Block1.hs  Block2.hs  Block3.hs  Block4.hs  Block5.hs
hw2/: hw2.cabal
hw3/: LICENSE  hw3.cabal
